Yuhsuan/issue 601 colorbar (#1366)
* add ColorbarComponent, OverlayColorbarSettings

* add setting panel

* add font settings, adjust code structure

* adjust naming; add keys; add scalings

* add hover event

* set rounding

* add scaleValueInverse()

* add limit to width; change colorscale for different scaling

* minor changes

* set tick num by tick density; handle rounding and spacing of the numbers

* add colorbar canvas to the exported image

* number sampling

* adjust code structure

* adjust cursor info pos; avoid blurry border; adjust ticks sampling

* fix blurry border; add custom options

* adjust setting panel height

* fix SafeNumbericInput bug; fix roundedNumbers bug; fix scaleValueInverse; adjust ranges of params

* apply new color format; add custom colors

* minor changes

* fix blurry ticks; add custom rotation

* adjust rounding

* adjust rounding

* adjust rounding

* adjust rounding

* add getPrecision()

* handle undefined unit

* add getOrder

* change handling of undefined units; rearrange order in the setting panel

* minor change

* change label custom text to image-dependent and set unit as default

--- a/src/components/ImageView/ImageViewSettingsPanel/ImageViewSettingsPanelComponent.scss
+++ b/src/components/ImageView/ImageViewSettingsPanel/ImageViewSettingsPanelComponent.scss
@@ -1,17 +1,22 @@
 @import "../../../../node_modules/@blueprintjs/core/lib/scss/variables.scss";
 
 .image-view-settings {
-    margin: 20px;
+    padding: 20px;
+    height: 100%;
 
     h3 {
         margin: 10px 0 10px 5px;
     }
 
+    div.bp3-tabs.bp3-vertical {
+        height: 100%;
+    }
+
     .bp3-tab-panel {
-        height: 25em;
-        overflow: auto;
         width: 100%;
-	    user-select: none;
+        height: 100%;
+        overflow: auto;
+        user-select: none;
     }
 
     .bp3-tab-list {
@@ -27,7 +32,7 @@
             margin-left: 0px;
         }
         .bp3-label {
-            width: 8em;
+            width: 12em;
             text-align: right;
         }
     }
@@ -53,5 +58,10 @@
             width: 190px;
             margin-right: 5px;
         }
+    }
+
+    hr {
+        margin: 15px;
+        border: 1px solid $light-gray3;
     }
 }
